@@ -236,7 +236,7 @@ bootstrapParallel <- function(projectName, assignments, psuNASC=NULL, stratumNAS
 #'
 #' @param projectName   				The name or full path of the project, a baseline object (as returned from \code{\link{getBaseline}} or \code{\link{runBaseline}}, og a project object (as returned from \code{\link{openProject}}).
 #' @param bootstrapMethod				The method to use for the bootstrap. Currently implemented are given in the following table:
-#' \tabular{rrr}{
+#' \tabular{rr}{
 #'   bootstrapMethod \tab Description\cr
 #'   AcousticTrawl \tab Bootstrap of acoustic tralw surveys, where both acoustic and biotic data are resampled\cr
 #'   SweptAreaLength \tab Bootstrap only biotic data with length information\cr
